<resources>
    <string name="app_name">To Do App</string>
    <string name="add_new_to_do_item">Add new to do item</string>
    <string name="delete_entry">Delete entry</string>
    <string name="delete_confirmation">Are you sure you want to delete this entry?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="crete_update_to_do_item">Crete/update to do item</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="image_url">Image url</string>
    <string name="empty_list_text">You didn\'t add any to do task. Use add button for new task!</string>
</resources>